--- a/wp-content/themes/jessica/style.css
+++ b/wp-content/themes/jessica/style.css
@@ -5,6 +5,12 @@
     Description: A custom theme for WordPress.
     Text Domain: jessica
 */
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'BenchNine', sans-serif;
     font-size: 20px;
@@ -30,10 +36,12 @@ img {
 }
 
 .home-image {
-    background-position: center;
-    background-color: pink;
+    background: no-repeat 50% 50% #ccc;
+    background-size: cover;
     width: 100%;
+    height: 100vh;
     margin: 0 auto;
+    color: white;
 }
 
 #header-menu {
@@ -54,10 +62,6 @@ img {
     text-decoration: none;
 }
 
-.gallery {
-    display: flex;
-}
-
 .footer {
     margin: 100px 10% 0 10%;
     display: flex;
@@ -65,4 +69,23 @@ img {
 
 .footer p {
     padding: 25px;
+}
+
+.gallery {}
+
+.gallery__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    list-style: none;
+}
+
+.gallery__list-item {
+    width: 45%;
+    padding: 20px;
+    border: 1px solid pink;
+}
+
+.gallery__list-item img {
+
 }
