--- a/wp-content/themes/jessica/style.css
+++ b/wp-content/themes/jessica/style.css
@@ -47,15 +47,16 @@ img {
 	font-size: 40px;
 }
 
-#header-menu-list {
+.header__menu {
 	position: absolute;
-	display: flex;
-	flex-direction: column;
+}
+
+.header__menu-list {
 	margin-top: 0;
 	list-style-type: none;
 }
 
-#header-menu-list li + li {
+.header__menu-list li + li {
 	padding-top: 20px;
 }
 
@@ -102,6 +103,6 @@ header a {
 	margin-top: 10%;
 }
 
-#copyright {
+.footer__copyright {
 	padding-right: 1em;
 }
