--- a/wp-content/themes/jessica/src/styles/global.scss
+++ b/wp-content/themes/jessica/src/styles/global.scss
@@ -1,7 +1,7 @@
 .content {
 	max-width: 70vw;
 	margin: 0 auto;
-	padding-top: 75px;
+	padding-top: 1em;
 }
 
 .header {
@@ -12,10 +12,14 @@
     }*/
 }
 
+.header-menu {
+    margin-bottom: 1em;
+}
+
 .header__heading {
-	padding-left: 1em;
-	margin-bottom: 20px;
+	margin-bottom: 10px;
     font-size: 40px;
+    text-align: center;
 
     /*@media (min-width: 480px) {
         float: left;
@@ -27,8 +31,10 @@
 }
 
 .header__menu-list {
-	display: flex;
-	margin-top: 0;
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
     list-style-type: none;
 
     /*@media (min-width: 1440px) {
@@ -41,6 +47,11 @@
             padding-top: 20px;
         }
     }*/
+
+    a {
+        display: block;
+        padding: 10px;
+    }
 }
 
 .home-image {
