--- a/wp-content/themes/jessica/src/styles/global.scss
+++ b/wp-content/themes/jessica/src/styles/global.scss
@@ -1,5 +1,5 @@
 .content {
-	max-width: 70vw;
+	max-width: 75vw;
 	margin: 0 auto;
 	padding-top: 1em;
 }
@@ -17,8 +17,8 @@
 }
 
 .header__heading {
-	margin-bottom: 10px;
-    font-size: 40px;
+    margin: 25px 0 0 0;
+    font-size: 60px;
     text-align: center;
 
     /*@media (min-width: 480px) {
@@ -35,6 +35,7 @@
     justify-content: center;
     margin: 0;
     padding: 0;
+    font-size: 25px;
     list-style-type: none;
 
     /*@media (min-width: 1440px) {
@@ -50,7 +51,7 @@
 
     a {
         display: block;
-        padding: 10px;
+        padding: 15px;
     }
 }
 
@@ -59,7 +60,7 @@
     img {
         max-height: calc(100vh - (75px * 2));
         margin: 0 auto;
-        box-shadow: 3px 3px 20px 10px rgba(0,0,0,0.3);
+        box-shadow: 3px 3px 20px 5px rgba(0,0,0,0.3);
     }
 }
 
