--- a/wp-content/themes/jessica/src/styles/base.scss
+++ b/wp-content/themes/jessica/src/styles/base.scss
@@ -9,9 +9,17 @@ body {
 	min-width: 320px;
 }
 
+html {
+	font-family: 'Lato', sans-serif;
+	font-size: 16px;
+	line-height: 1.8;
+
+	@media (min-width: 768px) {
+		font-size: 22px;
+	}
+}
+
 body {
-	font-family: 'BenchNine', sans-serif;
-	font-size: 20px;
 	margin: 0;
 }
 
