--- a/wp-content/themes/jessica/src/styles/global.scss
+++ b/wp-content/themes/jessica/src/styles/global.scss
@@ -14,11 +14,12 @@
 
 .header-menu {
 	margin-bottom: 1em;
+	font-size: 20px;
 }
 
 .header__heading {
 	margin: 25px 0 0 0;
-	font-size: 60px;
+	font-size: (60 / 22 * 1rem); // terminal font size divided by root font size
 	text-align: center;
 
 	/*@media (min-width: 480px) {
@@ -35,7 +36,6 @@
 	justify-content: center;
 	margin: 0;
 	padding: 0;
-	font-size: 25px;
 	list-style-type: none;
 
 	/*@media (min-width: 1440px) {
