--- a/wp-content/themes/jessica/src/styles/gallery.scss
+++ b/wp-content/themes/jessica/src/styles/gallery.scss
@@ -11,16 +11,24 @@
 	padding: 0;
 }
 
-@media (min-width: 768px) {
-	.gallery__list-item {
+.gallery__list-item {
+
+	@media (min-width: 768px) {
 		width: 45%;
 		padding: 20px;
 	}
 
-	.gallery__list-item {
+	&:nth-child(even) {
 
-		&:nth-child(even) {
+		@media (min-width: 768px) {
 			margin-top: 10%;
+		}
+	}
+
+	& + & {
+
+		@media (max-width: (768px - 1px)) {
+			margin-top: 3em;
 		}
 	}
 }
