--- a/wp-content/themes/jessica/src/styles/global.scss
+++ b/wp-content/themes/jessica/src/styles/global.scss
@@ -71,19 +71,26 @@
 	}
 }
 
-.about {
-	padding: 0 44px;
+.about,
+.contact {
+
+	@media (min-width: 768px) {
+		padding: 0 44px;
+	}
 }
 
 .footer {
 	display: flex;
-	padding: 5vw 0 0 14vw;
+	margin: 0 auto;
+	padding-top: 3em;
+	font-size: 16px;
+	justify-content: center;
 
 	a {
 		color: black;
 	}
 }
 
-.footer__copyright {
-	padding-right: 1em;
+.footer__social {
+	margin-left: 1em;
 }
