--- a/wp-content/themes/jessica/src/styles/modules/_global.scss
+++ b/wp-content/themes/jessica/src/styles/modules/_global.scss
@@ -5,35 +5,37 @@
 }
 
 .header {
-	/* position: absolute; */
-
-	/*@media (min-width: 1440px) {
-		position: fixed;
-	}*/
-}
-
-.header-menu {
-	margin-bottom: 1em;
-	font-size: 20px;
+	height: 100vh;
+    color: white;
+    background: no-repeat 50% 20%;
+    background-size: cover;
 }
 
 .header__heading {
-	margin: 25px 0 0 0;
 	font-size: (60 / 22 * 1rem); // terminal font size divided by root font size
-	text-align: center;
+	line-height: normal;
+	text-align: left;
+	margin-bottom: 0;
+	padding-top: 10px;
+	padding-left: 5%;
 
-	/*@media (min-width: 480px) {
-		float: left;
+	@media (min-width: 768px) {
+		padding-top: 50px;
 	}
+}
 
-	@media (min-width: 1440px) {
-		float: none;
-	}*/
+.header__heading-inner {}
+
+.header-menu {
+	font-size: 20px;
+	padding-left: 5%;
+	//text-shadow: 0 0 3px rgba(black, 0.3);
+
 }
 
 .header__menu-list {
 	display: flex;
-	justify-content: center;
+	justify-content: left;
 	margin: 0;
 	padding: 0;
 	list-style-type: none;
@@ -52,15 +54,6 @@
 	a {
 		display: block;
 		padding: 15px;
-	}
-}
-
-.home-image {
-
-	img {
-		max-height: calc(100vh - (75px * 2));
-		margin: 0 auto;
-		box-shadow: 3px 3px 20px 5px rgba(0,0,0,0.3);
 	}
 }
 
