--- a/wp-content/themes/jessica/src/styles/modules/_global.scss
+++ b/wp-content/themes/jessica/src/styles/modules/_global.scss
@@ -7,17 +7,26 @@
 .header {
 	height: 100vh;
     color: white;
-    background: no-repeat 50% 20%;
+	background: no-repeat 50%;
     background-size: cover;
 }
 
+.header__wrapper {
+	position: absolute;
+	bottom: 5px;
+}
+
 .header__heading {
-	font-size: (60 / 22 * 1rem); // terminal font size divided by root font size
+	font-size: 2em;
 	line-height: normal;
-	text-align: left;
+	text-align: center;
 	margin-bottom: 0;
 	padding-top: 10px;
 	padding-left: 5%;
+
+	@media (min-width: 500px) {
+		text-align: left;
+	}
 
 	@media (min-width: 768px) {
 		padding-top: 50px;
@@ -27,18 +36,21 @@
 .header__heading-inner {}
 
 .header-menu {
-	font-size: 20px;
+	font-size: 1em;
 	padding-left: 5%;
-	//text-shadow: 0 0 3px rgba(black, 0.3);
-
 }
 
 .header__menu-list {
 	display: flex;
-	justify-content: left;
+	justify-content: center;
 	margin: 0;
+	margin-top: -8px;
 	padding: 0;
 	list-style-type: none;
+
+	@media (min-width: 500px) {
+		justify-content: left;
+	}
 
 	/*@media (min-width: 1440px) {
 		display: block;
