--- a/wp-content/themes/jessica/src/styles/modules/_global.scss
+++ b/wp-content/themes/jessica/src/styles/modules/_global.scss
@@ -19,13 +19,12 @@
 .header__heading {
 	font-size: 2em;
 	line-height: normal;
-	text-align: center;
 	margin-bottom: 0;
 	padding-top: 10px;
-	padding-left: 5%;
+	padding-left: 15px;
 
 	@media (min-width: 500px) {
-		text-align: left;
+		padding-left: 10%;
 	}
 
 	@media (min-width: 768px) {
@@ -33,16 +32,17 @@
 	}
 }
 
-.header__heading-inner {}
-
 .header-menu {
 	font-size: 1em;
-	padding-left: 5%;
+
+	@media (min-width: 500px) {
+		margin-left: 20px;
+	}
 }
 
 .header__menu-list {
 	display: flex;
-	justify-content: center;
+	justify-content: left;
 	margin: 0;
 	margin-top: -8px;
 	padding: 0;
