--- a/wp-content/themes/jessica/src/styles/modules/_global.scss
+++ b/wp-content/themes/jessica/src/styles/modules/_global.scss
@@ -8,7 +8,7 @@
 	height: 100vh;
     color: white;
 	background: no-repeat;
-	background-size: cover;
+	background-size: cover 50%;
 	background-position-y: 25%;
 }
 
