--- a/wp-content/themes/jessica/src/styles/modules/_global.scss
+++ b/wp-content/themes/jessica/src/styles/modules/_global.scss
@@ -7,8 +7,8 @@
 .header {
 	height: 100vh;
     color: white;
-	background: no-repeat;
-	background-size: cover 50%;
+	background: no-repeat 50%;
+	background-size: cover;
 	background-position-y: 25%;
 }
 
